[metadata]
name = rl-for-gym
version = file: VERSION
author = Enric Ribera Borrell 
author_email = ribera.borrell@me.com
description = Reinforcement learning algorithms gym environments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riberaborrell/rl-for-gym
project_urls =
    Bug Tracker = https://github.com/riberaborrell/rl-for-gym/issues
classifiers =
    Programming Language :: Python :: 3
license_files = LICENSE

[options]
zip_safe = False
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    gymnasium
    imageio
    matplotlib
    mujoco
    numpy
    torch

[options.extras_require]
test = pytest

[options.packages.find]
where = src
