[metadata]
name = rl-random-times
version = file: VERSION
author = Enric Ribera Borrell 
author_email = ribera.borrell@gmail.com
description = Reinforcement learning algorithms with random time horizons.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riberaborrell/rl-random-times
project_urls =
    Bug Tracker = https://github.com/riberaborrell/rl-random-times/issues
classifiers =
    Programming Language :: Python :: 3
license_files = LICENSE

[options]
zip_safe = False
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    gymnasium
    envpool
    imageio
    matplotlib
    mujoco
    numpy<=1.26.4
    torch
    torchvision
    torchaudio

[options.extras_require]
test = pytest

[options.packages.find]
where = src
